# SteamMusicServer

./: .gitignore  Cargo.toml  README.md  build.sh  logos.md  run.sh
.github/workflows/: build.yml
VSA_shaders/: VSA_loader_tool.mjs
VSA_tools/: VSA_loader_tool.mjs  index.html  package-lock.json  package.json  server.mjs
_aliens/: queries.sql
config/: scanner_conf.yaml
src/: VSA_shadercore.js  cl_visualizers.js  config.rs  database.rs  index.html  loading.html  main.rs  mixer.css  mixer.js  og_viz.js  scanner.rs  server.rs  shader_catalog.rs  steam.rs  styles.css  visualizer_one.js
src-tauri/: tauri.conf.json
src-tauri/src/: config.rs  database.rs  main.rs  server.rs
