[package]
name = "music_server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "music_server"
path = "src/main.rs"

[dependencies]
rusqlite = { version = "0.35", features = ["bundled"] }
walkdir = "2"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
regex = "1"
ureq = { version = "2", features = ["json"] }
keyvalues-parser = "0.2"
rayon = "1"

# server
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
axum = "0.8"
axum-server = { version = "0.7", features = ["tls-rustls"] }
tower-http = { version = "0.6", features = ["cors"] }
rcgen = "0.13"
rustls = { version = "0.23", features = ["aws_lc_rs"] }
mime_guess = "2"
